working on the comment

--- a/Labs/Lab_2/Lab2/makefile
+++ b/Labs/Lab_2/Lab2/makefile
@@ -1,7 +1,7 @@
 all: ArrStack ListStack
 
 ArrStack:
-	g++ ./Array/lab_array.cpp ./Array/ArrStack_functions.cpp -o ./Array/ArrStack
+	gcc ./Array/lab_array.c ./Array/ArrStack_functions.c -o ./Array/ArrStack
 
 ListStack:
-	g++ ./List/lab_list.cpp ./List/ListStack_functions.cpp  -o ./List/ListStack
+	gcc ./List/lab_list.c ./List/ListStack_functions.c  -o ./List/ListStack
